2014-10-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DGeometryNode.h:
	* X3DGeometryNode.cpp:
	* TextureCoordinate.h:
	* TextureCoordinate.cpp:
	* TextureCoordinate3D.h:
	* TextureCoordinate4D.h:
	* MultiTextureCoordinate.h:
	* TextureCoordinate4D.cpp:
	* TextureCoordinate3D.cpp:
	* X3DTextureCoordinateNode.h:
	* MultiTextureCoordinate.cpp:
	* X3DTextureCoordinateNode.cpp:
	* TextureCoordinateGenerator.h:
	* TextureCoordinateGenerator.cpp: 

2014-10-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.cpp: 

2014-10-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp: 

2014-10-18  Holger Seelig  <holger.seelig@yahoo.de>

	* MotionBlur.cpp: 

2014-10-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.cpp: 

2014-10-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.cpp: 

2014-10-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Filter.h:
	* X3DPtr.h:
	* Filter.cpp:
	* GoldenGate.h:
	* Parser.h:
	* GoldenGate.cpp:
	* Parser.cpp: 

2014-10-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.h:
	* GoldenGate.cpp:
	* Parser.cpp:
	* X3DComposedGeometryNode.h:
	* X3DComposedGeometryNode.cpp: 

2014-10-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.cpp:
	* Parser.h:
	* GoldenGate.cpp:
	* Parser.cpp: 

2014-10-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.h:
	* Parser.cpp: 

2014-10-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* X3D.h:
	* EmptyCHeaderFile.h:
	* libtitania-x3d.cproj:
	* Loader.cpp:
	* GoldenGate.h:
	* Parser.h:
	* GoldenGate.h:
	* GoldenGate.cpp:
	* Parser.cpp:
	* GoldenGate.cpp:
	* X3DNurbsSurfaceGeometryNode.cpp: 

2014-10-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Coordinate.h:
	* Coordinate.cpp:
	* CoordinateDouble.h:
	* GeoCoordinate.h:
	* CoordinateDouble.cpp:
	* ElevationGrid.cpp:
	* GeoCoordinate.cpp:
	* GeoElevationGrid.h:
	* IndexedFaceSet.cpp:
	* X3DCoordinateNode.h:
	* GeoElevationGrid.cpp: 

2014-10-12  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoElevationGrid.h: